# cpp

./: .gitignore  README.md
cProjects/myFirstProject/: hello.c  increment  increment.c  pointArray  strArray
cppProjects/acadoExamples/: simpleRocket.cpp
cppProjects/acadoExamples/bicycleModel/: CMakeLists.txt  bicycleModel  bicycleModel.cpp
cppProjects/acadoExamples/closedLoopMPC/: CMakeLists.txt  closedLoopMPC  closedLoopMPC.cpp  road.txt
cppProjects/acadoExamples/mpcController/: CMakeLists.txt  mpcController  mpcController.cpp  ref.txt
cppProjects/acadoExamples/quarterCar/: CMakeLists.txt  Simulated Algebraic States  quarterCar  quarterCar.cpp
cppProjects/acadoExamples/simpleJoJo/: CMakeLists.txt  simpleJoJo  simpleJoJo.cpp  simpleJoJo_old.cpp
cppProjects/acadoExamples/simpleRocket/: CMakeLists.txt  controls.txt  parameters.txt  simpleRocket  simpleRocket.cpp  states.txt
cppProjects/acados/bicycleModel/: acados_ocp_bicycle_model_ode.json  acados_ocp_unicycle_ode.json  main.py  utils.py  vehicle_model.py
cppProjects/acados/bicycleModel_2/: acados_ocp.json  plotFcn.py  time2spatial.py
cppProjects/acados/minExample/: main.py
cppProjects/acados/rzrModel/: acados_ocp_bicycle_model_ode.json  cythonPractice.c  cythonPractice.pyx  helloworld.c  main.py  main2.py  main3.py  map.pyx  map2.py  mapMaker.py  mapSmallObst.npy  mppiPlanner.py  refTraj.csv  setup.py  testPlanner.py  utils.py  vehicle_model.py
cppProjects/acados/unicycle/: acados_ocp_unicycle_ode.json  robot_model.py  utils.py
cppProjects/cppBeginToBeyond/cppBeginToBeyond/: Makefile
cppProjects/cppBeginToBeyond/cppBeginToBeyond2/: cppBeginToBeyond2.workspace
cppProjects/cppBeginnerToBeyond/cppBeginnerToBeyond.xcodeproj/: project.pbxproj
(+446 files in other folders)
